# LDIMBenchmark

./: .gitignore  404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  release.yml
.github/worklflows/: build.yml
_extra/: jupyter.css  jupyter.js
design/: index.html
design/base-datasets/: index.html
design/datasets/: index.html
design/file-level-interface/: index.html
design/method/: index.html
design/programming-interface/: index.html
docker/ldimbenchmark/: Dockerfile
docs/: design.md  index.md  roadmap.md
experiments/: auto_hyperparameter.py  battledim.py  bug.py  complexity.py  complexity_test.py  dataset_analysis.py  dmas_specific.py  file_based.py  get_results.py  gjovik.py  graz-ragnitz.py  method_table.py  parallel_docker.py  pool_test.py  result_visualizations.py  sensitivity_analyisis.py  sensitivity_battledim.py  sensitivity_graz_ragnitz.py  sizes.py  sklearn_auto_hyperparameter.py  synthetic.py  test.py  test_docker.py  test_method_local.py
gen_ref_pages/: index.html
ldimbench/: __init__.py
ldimbenchmark/: __init__.py  benchmark.py  benchmark_complexity.py  classes.py
roadmap/: index.html
search/: search_index.json
story/: index.html
tests/: Dockerfile  conftest.py  method_to_test.py  shared.py  test.py  test_benchmark.py  test_classes_hyperparameter.py  test_dataset_analyzer.py  test_datasets.py  test_derivation.py  test_evaluation.py  test_generator.py  test_main.py
troubleshooting/: index.html
(+94 files in other folders)
